--- a/index.html
+++ b/index.html
@@ -21,25 +21,25 @@
         <div class="messages">
             <div class="unread container">
                 <div class="row">
-                <div class="col-1 col-sm-1"><img src="assets/images/avatar-mark-webber.webp" alt=""></div>
+                <div class="col-1 col-sm-1"><img src="avatar-mark-webber.webp" alt=""></div>
                 <div class="col-10 col-sm-11"><span class="name">Mark Webber </span> reacted to your recent post <span class="something"> My first tournament today! <div class="dot"></div></span>  <br>1m ago</div>
             </div>
             </div>
             <div class="unread container">
                 <div class="row">
-                <div class="col-1 col-sm-1"><img src="assets/images/avatar-angela-gray.webp" alt=""></div>
+                <div class="col-1 col-sm-1"><img src="avatar-angela-gray.webp" alt=""></div>
                 <div class="col-10 col-sm-11"><span class="name">Angela Gray </span>followed you <div class="dot"></div><br>5m ago</div>
             </div>
             </div>
             <div class="unread container">
                 <div class="row">
-                <div class="col-1 col-sm-1"><img src="assets/images/avatar-jacob-thompson.webp" alt=""></div>
+                <div class="col-1 col-sm-1"><img src="avatar-jacob-thompson.webp" alt=""></div>
                 <div class="col-10 col-sm-11"><span class="name">Jacob Thompson </span>has joined your group <span class="chess"> Chess Club </span><div class="dot"></div><br>1 day ago</div>
             </div>
             </div>
             <div class="read container">
                 <div class="row">
-                <div class="col-1 col-sm-1"><img src="assets/images/avatar-rizky-hasanuddin.webp" alt=""></div>
+                <div class="col-1 col-sm-1"><img src="avatar-rizky-hasanuddin.webp" alt=""></div>
                 <div class="col-10 col-sm-11"><span class="name">Rizky Hasanuddin </span>sent you a private message <br>5 days ago
                 <div class="extra">Hello, thanks for setting up the Chess Club. I've been a member for a few weeks now and I'm already having lots of fun and improving my game.</div>
             </div>
@@ -47,23 +47,23 @@
             </div>
             <div class="read container">
                 <div class="row">
-                <div class="col-1 col-sm-1"><img src="assets/images/avatar-kimberly-smith.webp" alt=""></div>
+                <div class="col-1 col-sm-1"><img src="avatar-kimberly-smith.webp" alt=""></div>
                 <div class="col-10 col-sm-11">
                     <div class="smith"><span class="name">Kimberly Smith </span> commented on your picture<br>1 week ago</div>
-                    <div class="img2"><img src="assets/images/image-chess.webp" alt=""></div>
+                    <div class="img2"><img src="image-chess.webp" alt=""></div>
                 </div>
                 
             </div>
             </div>
             <div class="read container">
                 <div class="row">
-                <div class="col-1 col-sm-1"><img src="assets/images/avatar-nathan-peterson.webp" alt=""></div>
+                <div class="col-1 col-sm-1"><img src="avatar-nathan-peterson.webp" alt=""></div>
                 <div class="col-10 col-sm-11"><span class="name">Nathan Peterson </span>reacted to your recent post <span class="something">5 end-game strategies to increase your win rate </span><br>2 weeks ago</div>
             </div>
             </div>
             <div class="read container">
                 <div class="row">
-                <div class="col-1 col-sm-1"><img src="assets/images/avatar-anna-kim.webp" alt=""></div>
+                <div class="col-1 col-sm-1"><img src="avatar-anna-kim.webp" alt=""></div>
                 <div class="col-10 col-sm-11"><span class="name">Anna Kim </span>left the group <span class="chess"> Chess CLub</span> <br>2 weeks ago</div>
             </div>
             </div>
